# zonnefysica-GUI

./: README.md  pyproject.toml
src/zonnefysica/: GUI.py  controller.py  model.py  selection_screen.py
zonnefysica/: pyproject.toml
zonnefysica/src/zonnefysica/: controller.py
