[tool.poetry]
name = "zonnefysica"
version = "0.1.0"
description = ""
authors = ["Brecht Siers <post@brechtjesiers.nl>"]
readme = "README.md"
packages = [{include = "zonnefysica", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
scipy = "^1.14.1"
tqdm = "^4.67.1"
matplotlib = "^3.9.3"
astropy = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
