[tool.poetry]
name = "zonnefysica"
version = "0.1.0"
description = ""
authors = ["Brecht Siers <post@brechtjesiers.nl>"]
readme = "README.md"
packages = [{ include = "zonnefysica", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pyside6 = "^6.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
